--- a/ch6 直接法视觉里程计/作业/曾是少年-第六章作业.md
+++ b/ch6 直接法视觉里程计/作业/曾是少年-第六章作业.md
@@ -332,15 +332,29 @@ c. 局部一致性假设。
 
 **答**: 
 
-当采用了金字塔的方法时，窗口固定，将图像生成金字塔过程中，在每一层金字塔上都用同一个大小的窗口来进行光流计算，这样很好的去解决了图像块的问题，这样一来图像块大小并不会带来明显差异。
+当采用金字塔时，窗口固定，将图像生成金字塔过程中，在每一层金字塔上都用同一个大小的窗口来进行光流计算，这样很好的去解决了图像块的问题，这样一来图像块大小并不会带来明显差异。
 
-当没有采用金字塔方法时。当窗口较大时，光流计算更鲁棒，当窗口较小时，光流计算更正确。原因在于，当图像中每一个部分的运动都不一致的时候如果开的窗口过大，很容易违背窗口(邻域)内的所有点光流一致的基本假设，这可能与实际不一致，所以窗口小，包含的像素少，更精确些。
+当不使用金字塔方法时。当窗口较大时，光流计算更鲁棒，当窗口较小时，光流计算更正确。原因在于，当图像中每一个部分的运动都不一致的时候如果开的窗口过大，很容易违背窗口(邻域)内的所有点光流一致的基本假设，这可能与实际不一致，所以窗口小，包含的像素少，更精确些。
 
+使用**单层直接法**进行测试 :
 
+* half_patch_size=4
+
+![image-20200627184150029](曾是少年-第六章作业.assets/image-20200627184150029.png)
+
+* half_patch_size=8
+
+![image-20200627161426971](曾是少年-第六章作业.assets/image-20200627161426971.png)
+
+* half_patch_size =16
+
+![image-20200627184103906](曾是少年-第六章作业.assets/image-20200627184103906.png)
 
 #### 3. 金字塔层数对结果有怎样的影响？缩放倍率呢？
 
 **答**: 金字塔层数一般越多效果越好，但是一般图像大于4~5层之后都变得太小，特征点像素太过紧密容易出现错误追踪。放大倍率的话，放大倍率小，金字塔的层数可以增加，迭代层数增多，效果可以变得更好。
+
+
 
 
 
@@ -363,22 +377,64 @@ $$
 #### 1. 该问题中的误差项是什么？
 
 $$
-error = I_{ref}(\pi(p_i))-I_{cur}(\pi(T_{cur,ref}\pi_i))
+\begin{aligned}
+error &= I_{ref}(p_1)-I_{cur}(p_2)\\
+\end{aligned}
 $$
+
+其中p1,p2 为非其次像素坐标，ξ为R,t对应的李代数
+$$
+\begin{aligned}
+p_1 &= 
+\left[
+\begin{array}{ccc} u\\v\end{array}
+\right]_1
+= D\frac{1}{Z_1}KP
+\end{aligned}
+$$
+
+$$
+\begin{aligned}
+p_2 &= 
+\left[
+\begin{array}{ccc} u\\v\end{array}
+\right]_2
+= D\frac{1}{Z_2}(KP+t)
+= D\frac{1}{Z_2}K\exp(\xi^{\wedge})P
+\end{aligned}
+$$
+
+
 
 #### 2. 误差相对于自变量的雅可比维度是多少？如何求解？
 
-答: 误差是1维的, 自变量T是6维的.
-
+答: 本题中自变量是位姿,唯独时6维的,光度变化是1维的, 自变量T是6维的. 雅克比矩阵时1*6维的.求解过程如下: 给李代数添加扰动:
+$$
+\begin{aligned}
+e(\xi \oplus \delta \xi ) &= I_1(\frac{1}{Z_1}DKP)-I_2(\frac{1}{Z_2}DK\exp(\xi^{\wedge})P+u) \\
+& \approx  I_1(\frac{1}{Z_1}DKP)-I_2(\frac{1}{Z_2}DK\exp(\xi^{\wedge})) -
+\frac{\partial (I_{2}{(u)})}{\partial u} \frac{\partial u}{\partial q} \frac{\partial q}{\partial \delta \xi} \delta \xi \\
+\end{aligned}
+$$
 令$q=TP$,$u=\frac{1}{Z_2}Kq$,有
 $$
 \begin{aligned}
-\frac{\partial e}{\partial \delta \xi} &= 
-\frac{\partial -I_{cur}(\pi(T_{cur,ref}\pi_i))}{\partial \delta\xi}
-\\ &= \frac{\partial (-I_{cur}{(u)})}{\partial u} \frac{\partial u}{\partial q} \frac{\partial q}{\partial \delta \xi} \delta \xi
-\\& = -\frac{\partial I_2}{\partial u} \frac{1}{Z}K P \delta \xi
+\frac{\partial e}{\partial \delta \xi} 
+&= \frac{\partial (-I_{cur}{(u)})}{\partial u} \frac{\partial u}{\partial q} \frac{\partial q}{\partial \delta \xi} 
 \\& = -\frac{\partial I_2}{\partial u} \frac{\partial u}{\partial \delta \xi}
-\\ &=
+\\ &= -\frac{\partial I_2}{\partial u}
+\left[
+\begin{array}{ccc}
+\frac{f_x}{Z} & 0 & -\frac{f_x X}{Z^2}\\
+0 & \frac{f_y}{Z} &  -\frac{f_y Y}{Z^2}
+\end{array}
+\right]
+\left[
+\begin{array}{ccc}
+I & -q^{\wedge}
+\end{array}
+\right]
+\\ &= 
 -\frac{\partial I_2}{\partial u}
 \left[
 \begin{array}{ccc}
@@ -392,9 +448,9 @@ $$
 
 #### 3. 窗口可以取多大？是否可以取单个点？
 
-**答**
+**答**: 窗口大小的选择和误差以及计算量有关系。窗口不能取太大，随着窗口的增大，两帧之间的关键点的计算量将会呈指数增长；窗口可以取单点。但是这样会导致像素梯度计算误差增大.
 
-
+----
 
 下面是一些实现过程中的提示：
 
@@ -422,27 +478,25 @@ $$
 
 多层光流结果如下:
 
-(1)
+| 序号 | 平移                               |
+| ---- | ---------------------------------- |
+| t1   | (-0.00183501,0.00266685,-0.725144) |
+| t2   | (0.00740888,-0.0013171,-1.4707)    |
+| t3   | (0.00708387,0.00377631,-2.20888)   |
+| t4   | (0.00832254,0.00281999,-2.9961)    |
+| t5   | (0.0189283,-0.0101808,-3.7931)     |
 
-![image-20200627113931032](曾是少年-第六章作业.assets/image-20200627113931032.png)
+可以看出最后的误差在半米之内.
 
-(2)
+在第五张图片上的金字塔如下所示
 
-![image-20200627113623569](曾是少年-第六章作业.assets/image-20200627113623569.png)
+![image-20200627194724447](曾是少年-第六章作业.assets/image-20200627194724447.png)
 
-(3)
+![image-20200627194752775](曾是少年-第六章作业.assets/image-20200627194752775.png)
 
-![image-20200627113716816](曾是少年-第六章作业.assets/image-20200627113716816.png)
+<img src="曾是少年-第六章作业.assets/image-20200627194917715.png" alt="image-20200627194917715" style="zoom:80%;" />
 
-(4)
-
-![image-20200627113751501](曾是少年-第六章作业.assets/image-20200627113751501.png)
-
-(5)
-
-![image-20200627113817809](曾是少年-第六章作业.assets/image-20200627113817809.png)
-
-![image-20200627113535943](曾是少年-第六章作业.assets/image-20200627113535943.png)
+![image-20200627194825295](曾是少年-第六章作业.assets/image-20200627194825295.png)
 
 ### 3.3 * 延伸讨论
 
@@ -489,8 +543,6 @@ double sum = accumulate(cost.begin(),cost.end(),0.0);
 cout<<"平均误差:"<<sum/cost.size()<<endl;
 
 ```
-
-
 
 使用单层直接法最后得到的平均误差为`-7.02735`:
 
