--- a/ch6 直接法视觉里程计/作业/曾是少年-第六章作业.md
+++ b/ch6 直接法视觉里程计/作业/曾是少年-第六章作业.md
@@ -52,16 +52,6 @@ For more complex warps the composition of the two warps can be more involved (Ba
 The only differences between the forwards and inverse compositional algorithms (see Figs. 3 and 4) are: (1) the error image is computed after switching the roles of I and T , (2) Steps 3, 5, and 6 use the gradient of T rather than the gradient of I and can be precomputed, (3) Eq. (35) is used to computep rather than Eq. (10), and finally (4) the incremental warp is inverted before it is composed with the current estimate in Step 9.
 ```
 
-正向和逆向组合算法之间的唯一区别是：
-
-1. 切换 I 和 T 的角色后计算误差图像；
-
-2. 步骤3、5和6使用梯度 可以预先计算T的T而不是I的梯度，
-
-3. 式.35 用于计算p而不是等式(10)。 
-
-4. 在将增量扭曲与步骤9中的当前估计值组合之前将其反转。
-
 
 
 向前方法对于输入图像进行参数化(包括仿射变换及放射增量). 反向方法则同时输入图像参数和模板图像, 其中输入图像参数化仿射变换, 模板图像参数化仿射增量. 因此反向方法的计算量显著降低，计算效率较高.。由于图像灰度值和运动参数非线性, 整个优化过程为非线性。
@@ -143,9 +133,7 @@ dy += update[1];
 
 **正向法运行结果**如下:
 
-<img src="曾是少年-第六章作业.assets/T_SingleLevel.jpg" alt="T_SingleLevel" style="zoom:50%;" />
-
-
+![运行结果截图：T_SingleLevel](曾是少年-第六章作业.assets/运行结果截图：T_SingleLevel.jpg)
 
 感悟:
 
@@ -448,7 +436,9 @@ $$
 
 #### 3. 窗口可以取多大？是否可以取单个点？
 
-**答**: 窗口大小的选择和误差以及计算量有关系。窗口不能取太大，随着窗口的增大，两帧之间的关键点的计算量将会呈指数增长；窗口可以取单点。但是这样会导致像素梯度计算误差增大.
+**答**: 窗口大小的选择和误差以及计算量有关系。窗口不能取太大，随着窗口的增大，两帧之间的关键点的计算量将会呈指数增长；窗口可以取单点。但是这样会导致像素梯度计算误差增大. 单个像素在两张图片里灰度不变的假设太过强烈，使用多个像素有助于提供鲁棒性。
+
+
 
 ----
 
@@ -505,27 +495,52 @@ $$
 
 #### 1. 直接法是否可以类似光流，提出 inverse, compositional 的概念？它们有意义吗？
 
+**答**：直接法通过求解相机运动来计算第二帧图像对应关键点的位置，如果提出 inverse, compositional 的概念，第二帧图像的信息将会失效，没有意义。
+
 #### 2. 请思考上面算法哪些地方可以缓存或加速？
+
+**答**：加窗口部分，合适大小的窗口，会使计算加速
 
 #### 3. 在上述过程中，我们实际假设了哪两个 patch 不变？
 
+**答**：1. 灰度不变假设；2. 同窗口内深度不变假设。
+
 #### 4. 为何可以随机取点？而不用取角点或线上的点？那些不是角点的地方，投影算对了吗？
+
+**答**：直接法对图像中的灰度值优化，最小化的是目标像素块的是光度误差，不是角点也没有关系。而特征点法提取的特征点是为了能够进行图像匹配，而在图像中选择具有代表性的区域，
 
 #### 5. 请总结直接法相对于特征点法的异同与优缺点。
 
+**答**：直接法最大的贡献在于，以更整体、更优雅的方式处理了数据关联问题。特征点法需要依赖重复性较强的特征提取器，以及正确的特征匹配，才能得正确地计算相机运动。而直接法，则并不要求一一对应的匹配，只要先前的点在当前图像当中具有合理的投影残差，我们就认为这次投影是成功的。而成功与否，主要取决于我们对地图点深度以及相机位姿的判断，并不在于图像局部看起来是什么样子。
+
+优势：
+
+1. 相比特征点法（只使用了特征点周围的信息），直接法使用了图像中全部的信息（半直接法只用了边缘梯度）；
+2. 节省特征提取与匹配的大量时间，易于移植到嵌入式系统中，以及与IMU进行融合；
+3. 使用的是像素梯度而不必是角点，可以在特征缺失的场合使用，如环境中存在许多重复纹理或是缺乏角点，但出现许多边缘或光线变量不明显区域；
+4. 可以进行稠密或半稠密的地图重建；
+
+劣势：
+
+1. 一般对相机要求较高，需要全局快门相机，进行光度标定等
+2. 灰度不变是一个强假设，难以满足（易受曝光和模糊影像）；
+3. 单像素区没有区分度，需要计算图像块或是相关性；
+4. 直接法成功的前提，是目标函数从初始值到最优值之间一直是下降的，然而图像非凸。因此需要有一个相当不错的初始估计，还需要一个质量较好的图像；
+5. 难以实现地图复用、回环检测、丢失后的重定位等：除非存储所有的关键帧图像，否则很难利用先前建好的地图；即使有办法存储所有关键帧的图像，那么在重用地图时，我们还需要对位姿有一个比较准确的初始估计——这通常是困难的。
 
 
-## 4 * 使用光流计算视差（2 分，约 1 小时）
+
+## 附加题 四 * 使用光流计算视
 
 请注意本题为附加题。
 在上一题中我们已经实现了金字塔 `LK` 光流。光流有很多用途，它给出了两个图像中点的对应关系，所以我们可以用光流进行位姿估计，或者计算双目的视差。回忆第四节课的习题中，我们介绍了双目可以通过视差图得出点云，但那时直接给出了视差图，而没有进行视差图的计算。现在，给定图像 `left.png`,` right.png`，请你使用上题的结果，计算 `left.png` 中的 `GFTT` 点在 `right.png` 中的（水平）视差，然后与 `disparity.png` 进行比较。这样的结果是一个稀疏角点组成的点云。请计算每个角点的水平视差，然后对比视差图比较结果。
 本程序不提供代码框架，请你根据之前习题完成此内容,
 
+---
+
 **答:**
 
-视差计算代码如下:
-
-前提:需要把上题的直接法函数代码稍作修改,把追踪到的像素返回
+视差计算代码如下，（前提:需要把上题的直接法函数代码稍作修改,把追踪到的像素返回）：
 
 ```C++
 //视差计算
