--- a/ch6 直接法视觉里程计/作业/曾是少年-第六章作业.md
+++ b/ch6 直接法视觉里程计/作业/曾是少年-第六章作业.md
@@ -40,8 +40,6 @@
 For more complex warps the composition of the two warps can be more involved (Baker and Matthews, 2001).We therefore have two requirements on the set of warps: (1) the set of warps must contain the identity warp and (2) the set of warps must be closed under composition. The set ofwarps must therefore form a semi-group. This requirement is not very strong. Most warps used in computer vision, including homographies and 3D rotations (Shum and Szeliski, 2000), naturally form semi-groups.
 ```
 
-
-
 `Forward Compositional` 的 `warp` 集合包含 `identity warp`,` warp` 集 合 包 含 在`Composition` 操作上是半群(`semi-group`), 其中包括 `Homograph`,` 3D rotation` 等. `Inverse Compositional` 也是 `semi-group`, 另外要求增量 `warp` 可逆, 其中包括 `Homograph`,`3D rotation` 等, 但不包括 `piece wise affine`.
 
 #### 3. forward 和 inverse 有何差别？
@@ -52,10 +50,7 @@ For more complex warps the composition of the two warps can be more involved (Ba
 The only differences between the forwards and inverse compositional algorithms (see Figs. 3 and 4) are: (1) the error image is computed after switching the roles of I and T , (2) Steps 3, 5, and 6 use the gradient of T rather than the gradient of I and can be precomputed, (3) Eq. (35) is used to computep rather than Eq. (10), and finally (4) the incremental warp is inverted before it is composed with the current estimate in Step 9.
 ```
 
-
-
-向前方法对于输入图像进行参数化(包括仿射变换及放射增量). 反向方法则同时输入图像参数和模板图像, 其中输入图像参数化仿射变换, 模板图像参数化仿射增量. 因此反向方法的计算量显著降低，计算效率较高.。由于图像灰度值和运动参数非线性, 整个优化过程为非线性。
-`forward`方法和`inverse`方法在目标函数上不太一样，一个是把运动向量 p 都是跟着被匹配图像，但是向前方法中的迭代的微小量 Δp 使用 I 计算，反向方法中的 Δp 使用 T计算，这样计算量便小了。
+向前方法对于输入图像进行参数化(包括仿射变换及放射增量). 反向方法则同时输入图像参数和模板图像, 其中输入图像参数化仿射变换, 模板图像参数化仿射增量. 因此反向方法的计算量显著降低，计算效率较高.。由于图像灰度值和运动参数非线性, 整个优化过程为非线性。`forward`方法和`inverse`方法在目标函数上不太一样，一个是把运动向量 p 都是跟着被匹配图像，但是向前方法中的迭代的微小量 Δp 使用 I 计算，反向方法中的 Δp 使用 T计算，这样计算量便小了。
 
 
 
@@ -133,7 +128,7 @@ dy += update[1];
 
 **正向法运行结果**如下:
 
-![运行结果截图：T_SingleLevel](曾是少年-第六章作业.assets/运行结果截图：T_SingleLevel.jpg)
+![image-20200627232530453](曾是少年-第六章作业.assets/image-20200627232530453.png)
 
 感悟:
 
@@ -297,9 +292,7 @@ for(auto &kp:kp2_pyr)
 
 **答**: 光流法中的金字塔是逐层迭代寻找最佳的关键点位置和光流方向，目的是解决光流在运动过程中难以检测的问题，或者说图像运动过快导致跟踪不上的问题。
 
-特征点法中的金字塔是通过逐层检测特征点来增加尺度描述，有时候图像从远处看是一个特征点，但是近看可能不是，所以特征点法用金字塔目的是解决特征点的尺度不变性问题
-
-
+特征点法中的金字塔是通过逐层检测特征点来增加尺度描述，有时候图像从远处看是一个特征点，但是近看可能不是，所以特征点法用金字塔目的是解决特征点的尺度不变性问题.
 
 提示：你可以使用上面写的单层光流来帮助你实现多层光流。
 
@@ -341,8 +334,6 @@ c. 局部一致性假设。
 #### 3. 金字塔层数对结果有怎样的影响？缩放倍率呢？
 
 **答**: 金字塔层数一般越多效果越好，但是一般图像大于4~5层之后都变得太小，特征点像素太过紧密容易出现错误追踪。放大倍率的话，放大倍率小，金字塔的层数可以增加，迭代层数增多，效果可以变得更好。
-
-
 
 
 
@@ -438,8 +429,6 @@ $$
 
 **答**: 窗口大小的选择和误差以及计算量有关系。窗口不能取太大，随着窗口的增大，两帧之间的关键点的计算量将会呈指数增长；窗口可以取单点。但是这样会导致像素梯度计算误差增大. 单个像素在两张图片里灰度不变的假设太过强烈，使用多个像素有助于提供鲁棒性。
 
-
-
 ----
 
 下面是一些实现过程中的提示：
@@ -530,7 +519,7 @@ $$
 
 
 
-## 附加题 四 * 使用光流计算视
+## 附加题 四 * 使用光流计算视差
 
 请注意本题为附加题。
 在上一题中我们已经实现了金字塔 `LK` 光流。光流有很多用途，它给出了两个图像中点的对应关系，所以我们可以用光流进行位姿估计，或者计算双目的视差。回忆第四节课的习题中，我们介绍了双目可以通过视差图得出点云，但那时直接给出了视差图，而没有进行视差图的计算。现在，给定图像 `left.png`,` right.png`，请你使用上题的结果，计算 `left.png` 中的 `GFTT` 点在 `right.png` 中的（水平）视差，然后与 `disparity.png` 进行比较。这样的结果是一个稀疏角点组成的点云。请计算每个角点的水平视差，然后对比视差图比较结果。
