--- a/ch5 特征点法视觉里程计/作业/曾是少年-第五章作业.md
+++ b/ch5 特征点法视觉里程计/作业/曾是少年-第五章作业.md
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
-# 第五章作业
-=======
 # 第五章作业
 
 作者：曾是少年
@@ -28,6 +25,7 @@ $$
   θ = \arctan(m_{01}/m_{10}).
 $$
   实际上只需计算 $m_{01}$ 和 $m_{10}$ 即可。习题中取图像块大小为 `16x16`，即对于任意点 $(u, v)$，图像块从$  (u − 8, v − 8)$ 取到 $(u + 7, v + 7) $即可。请在习题的 `computeAngle `中，为所有特征点计算这个旋转角。
+
  提示：
 
   1. 由于要取图像 16x16 块，所以位于边缘处的点（比如 u < 8 的）对应的图像块可能会出界，此时需要判断该点是否在边缘处，并跳过这些点。
@@ -79,19 +77,12 @@ void computeAngle(const cv::Mat &image, vector<cv::KeyPoint> &keypoints) {
    * 使用相对坐标的质心有优势：在求`cx`和`cy`时，如果是绝对坐标，那么`m00`每一步也必须乘上`p.x`和`p.y`，并且算出来是绝对质心计算角度还需要做一次差，相对坐标可以避免多步乘法和减法运算。
    
    
+   
+   
 
 ### 2.2 ORB 描述
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-### 2.3 暴力匹配
->>>>>>> b7402b8e64d354a5886166fc57c6961c210fe69c
-=======
-​	ORB 描述即带旋转的 BRIEF 描述。所谓 BRIEF 描述是指一个 0-1 组成的字符串（可以取 256 位或128 位），每一个 bit 表示一次像素间的比较。算法流程如下：
-=======
-​	ORB 描述即**带旋转的 BRIEF 描述**。所谓 BRIEF 描述是指一个 0-1 组成的字符串（可以取 256 位或128 位），每一个 bit 表示一次像素间的比较。算法流程如下：
->>>>>>> 999ace7d04d0ee42bac11b1131594a07e5a14c6b
-
+ORB 描述即**带旋转的 BRIEF 描述**。所谓 BRIEF 描述是指一个 0-1 组成的字符串（可以取 256 位或128 位），每一个 bit 表示一次像素间的比较。算法流程如下：
 1. 给定图像 I 和关键点 (u, v)，以及该点的转角 θ。以 256 位描述为例，那么最终描述子
    $$
    d = [d_1, d_2, ..., d_{256}].
@@ -231,6 +222,8 @@ void bfMatch(const vector<DescType> &desc1, const vector<DescType> &desc2, vecto
 匹配结果如下图：
 
 <img src="曾是少年-第五章作业.assets/image-20200619112337033.png" alt="image-20200619112337033" style="zoom:80%;" />
+
+提示: 暴力匹配的优化可以使用快速查找就是因为 由于两个连续帧之间的那个相机运动可能不会太大，所以各个物体在图片中的位置也应该变化不是太大，这样的话就可以针对那个第一个图中第一个图中特征点，在第二个图中快速进行查找。
 
 
 
@@ -408,9 +401,6 @@ t^R =  0.0203619   0.400711  0.0332407
 ```
 
 通过以上结果，可以看出$t^{\wedge}R=-E$,相差了一个乘法因子。
-<<<<<<< HEAD
->>>>>>> a676a0140f8a43c17631b892991ca6a2d1d08424
-=======
 
 ![image-20200618091733650](曾是少年-第五章作业.assets/image-20200618091733650.png)
 
@@ -621,9 +611,10 @@ T_esti *=  Sophus::SE3::exp(dx); //更新估计
 在实际当中，我们经常需要比较两条轨迹之间的误差。第三节课习题中，你已经完成了两条轨迹之间的 RMSE 误差计算。但是，由于 ground-truth 轨迹与相机轨迹很可能不在一个参考系中，它们得到的轨迹并不能直接比较。这时，我们可以用 ICP 来计算两条轨迹之间的相对旋转与平移，从而估计出两个参考系之间的差异。
 
 <img src="曾是少年-第五章作业.assets/image-20200619011038520.png" alt="image-20200619011038520" style="zoom:80%;" />图 3: vicon 运动捕捉系统，部署于场地中的多个红外相机会捕捉目标球的运动轨迹，实现快速定位。
-设真实轨迹为 $T_g$，估计轨迹为 $T_e$，二者皆以 $T_{WC}$ 格式存储。但是真实轨迹的坐标原点定义于外部某参考系中（取决于真实轨迹的采集方式，如 Vicon 系统可能以某摄像头中心为参考系，见图 3），而估计轨迹则以相机出发点为参考系（在视觉 SLAM 中很常见）。由于这个原因，理论上的真实轨迹点与估计轨迹点应满足：
-
-Tg,i = TgeTe,i (4)
+设真实轨迹为 $T_g$，估计轨迹为 $T_e$，二者皆以 $T_{WC}$ 格式存储。但是真实轨迹的坐标原点定义于外部某参考系中（取决于真实轨迹的采集方式，如 Vicon 系统可能以某摄像头中心为参考系，见图 3），而估计轨迹则以相机出发点为参考系（在视 SAM 中很常见）。由于这个原因，理论上的真实轨迹点与估计轨迹点应满足：
+$$
+T_{g,i} = T_{ge}T_{e,i}
+$$
 其中 i 表示轨迹中的第 i 条记录，Tge ∈ SE(3) 为两个坐标系之间的变换矩阵，该矩阵在整条轨迹中保持
 不变。Tge 可以通过两条轨迹数据估计得到，但方法可能有若干种：
 
@@ -757,4 +748,3 @@ DrawTrajectory(truth_poses_rt,esti_poses);
 对齐后的结果如下所示（本次实验中，将groundtruth轨迹与估计出的轨迹对齐，）
 
 <img src="曾是少年-第五章作业.assets/image-20200619020408454.png" alt="image-20200619020408454" style="zoom:67%;" />
->>>>>>> 999ace7d04d0ee42bac11b1131594a07e5a14c6b
