--- a/ch7 后端优化/曾是少年-第七章作业/第七章作业.md
+++ b/ch7 后端优化/曾是少年-第七章作业/第七章作业.md
@@ -103,13 +103,14 @@ $$
 
 ### 3.2 实现
 
-下⾯，请你根据上述说明，使⽤ g2o 实现上述优化，并⽤ pangolin 绘制优化结果。程序框架见 code/di-rectBA.cpp ⽂件。实现过程中，思考并回答以下问题：
+下⾯，请你根据上述说明，使⽤ g2o 实现上述优化，并⽤ pangolin 绘制优化结果。程序框架见 `code/di-rectBA.cpp` ⽂件。实现过程中，思考并回答以下问题：
 
-1.	能否不要以 [x, y, z]T 的形式参数化每个点？
+1.	能否不要以 $[x, y, z]^T$ 的形式参数化每个点？
 2.	取 4x4 的 patch 好吗？取更⼤的 patch 好还是取⼩⼀点的 patch 好？
 3.	从本题中，你看到直接法与特征点法在 BA 阶段有何不同？
 4.	由于图像的差异，你可能需要鲁棒核函数，例如 Huber。此时 Huber 的阈值如何选取？
-5.	提⽰：
+
+提示：
 
 1.	构建 Error 之前先要判断点是否在图像中，去除⼀部分边界的点。
 2.	优化之后，Pangolin 绘制的轨迹与地图如图 1 所⽰。
