--- a/ch7 后端优化/曾是少年-第七章作业/第七章作业.md
+++ b/ch7 后端优化/曾是少年-第七章作业/第七章作业.md
@@ -96,23 +96,42 @@ $time, t_x, t_y, t_z, q_x, q_y, q_z, q_w$
 $$
 \min\sum^7_{j=1}\sum^N_{i=1}\sum_W||I(p_i)-I_j(\pi(KT_jp_i))||^2_2
 $$
-即最⼩化任意点在任意图像中投影与其本⾝颜⾊之差。其中K 为相机内参（在程序内以全局变量形式给定），$\pi$为投影函数，$W$ 指代整个`patch`。下面，请回答：
-1. 如何描述任意⼀点投影在任意⼀图像中形成的error？
-2. 每个error 关联⼏个优化变量？
-3. error 关于各变量的雅可⽐是什么？
+即最小化任意点在任意图像中投影与其本⾝颜⾊之差。其中K 为相机内参（在程序内以全局变量形式给定），$\pi$为投影函数，$W$ 指代整个`patch`。下面，请回答：
+#### 1. 如何描述任意一点投影在任意⼀图像中形成的error？
+
+答：
+$$
+error = I(p_i)-I_j(\pi(KT_jp_j))
+$$
+
+#### 2. 每个error 关联几个优化变量？
+
+答：每个error关联 T p两个优化变量
+
+#### 3. error 关于各变量的雅可比是什么？
+
+
 
 ### 3.2 实现
 
 下⾯，请你根据上述说明，使⽤ g2o 实现上述优化，并⽤ pangolin 绘制优化结果。程序框架见 `code/di-rectBA.cpp` ⽂件。实现过程中，思考并回答以下问题：
 
-1.	能否不要以 $[x, y, z]^T$ 的形式参数化每个点？
-2.	取 4x4 的 patch 好吗？取更⼤的 patch 好还是取⼩⼀点的 patch 好？
-3.	从本题中，你看到直接法与特征点法在 BA 阶段有何不同？
-4.	由于图像的差异，你可能需要鲁棒核函数，例如 Huber。此时 Huber 的阈值如何选取？
+#### 1. 能否不要以 $[x, y, z]^T$ 的形式参数化每个点？
+
+#### 2. 取 4x4 的 patch 好吗？取更大的 patch 好还是取小⼀点的 patch 好？
+
+#### 3. 从本题中，你看到直接法与特征点法在 BA 阶段有何不同？
+
+#### 4. 由于图像的差异，你可能需要鲁棒核函数，例如 Huber。此时 Huber 的阈值如何选取？
 
 提示：
 
-1.	构建 Error 之前先要判断点是否在图像中，去除⼀部分边界的点。
-2.	优化之后，Pangolin 绘制的轨迹与地图如图 1 所⽰。
-3.	你也可以不提供雅可⽐的计算过程，让 g2o ⾃⼰计算⼀个数值雅可⽐。
-4.	以上数据实际取⾃ DSO[1]。
+1. 构建 Error 之前先要判断点是否在图像中，去除⼀部分边界的点。
+
+2. 优化之后，Pangolin 绘制的轨迹与地图如图 1 所示。
+
+3. 你也可以不提供雅可比的计算过程，让 g2o 自己计算⼀个数值雅可比。
+
+4. 以上数据实际取⾃ DSO[1]。
+
+![image-20200712085945801](第七章作业.assets/image-20200712085945801.png)
