--- a/ch7 后端优化/曾是少年-第七章作业/第七章作业.md
+++ b/ch7 后端优化/曾是少年-第七章作业/第七章作业.md
@@ -71,6 +71,8 @@ Pose的参数化表示包括欧拉角、四元数、变换矩阵。
 
 #### 3. 本文写于2000 年，但是文中提到的很多内容在后面十几年的研究中得到了印证。你能看到哪些方向在后续工作中有所体现？请举例说明。
 
+​	
+
 
 
 ### 2.2 BAL-dataset
@@ -83,9 +85,223 @@ BAL（Bundle Adjustment in large）[数据集](http://grail.cs.washington.edu/pr
 
 1. 注意BAL 的投影模型⽐教材中介绍的多了个负号；
 
+答：（本题我没有思路，因此主要是参考了网络上的代码进行学习验证的）
 
+一般情况下，使用g2o的主要过程如下：
 
+1. 定义顶点和边的类型
+2. 构建图
+3. 选择优化算法
+4. 调用g2o
 
+具体编程过程如下：
+
+1. 打开BAL数据集文件`problem-16-22106-pre.txt`。描述问题
+
+   这一部分调用common.cpp中的BALProblem类来进行
+
+   ```C++
+   //读取BAL数据
+   string bal_file_name = "problem-16-22106-pre.txt";
+   //读取BAL数据 构建BAL问题
+   BALProblem bal_problem(bal_file_name);
+   //调用Normalize接口对数据进行归一化
+   bal_problem.Normalize();
+   //调用Perturb接口对数据添加噪声
+   bal_problem.Perturb(0.1,0.5,0.5);
+   ```
+
+2. 定义顶点（使用节点来表示相机和路标）
+
+   相机位姿节点
+
+   ```C++
+   //相机位姿节点
+   //继承的g2o::BaseVertex基类   <优化变量维度,数据类型>
+   /// 位姿加相机内参的顶点，9维，前三维为so3，接下去为t, f, k1, k2
+   class VertexPoseAndIntrinsics : public g2o::BaseVertex<9, PoseAndIntrinsics> {
+   public:
+       EIGEN_MAKE_ALIGNED_OPERATOR_NEW;
+   
+       VertexPoseAndIntrinsics() {}
+       //重置
+       virtual void setToOriginImpl() override {
+           _estimate = PoseAndIntrinsics();
+       }
+       //更新
+       virtual void oplusImpl(const double *update) override {
+           _estimate.rotation = SO3d::exp(Vector3d(update[0], update[1], update[2])) * _estimate.rotation; //李代数的更新方式
+           _estimate.translation += Vector3d(update[3], update[4], update[5]); //平移部分的更新
+           _estimate.focal += update[6]; //更新焦距
+           _estimate.k1 += update[7]; //更新内参
+           _estimate.k2 += update[8]; //更新内参
+       }
+   
+       /// 根据估计值投影一个点
+       Vector2d project(const Vector3d &point) {
+           Vector3d pc = _estimate.rotation * point + _estimate.translation;
+           pc = -pc / pc[2];
+           double r2 = pc.squaredNorm();
+           double distortion = 1.0 + r2 * (_estimate.k1 + _estimate.k2 * r2);
+           return Vector2d(_estimate.focal * distortion * pc[0],
+                           _estimate.focal * distortion * pc[1]);
+       }
+   
+       //读盘和存盘
+       virtual bool read(istream &in) {}
+   
+       virtual bool write(ostream &out) const {}
+   };
+   ```
+
+   
+
+   路标节点 
+
+   ```C++
+   class VertexPoint : public g2o::BaseVertex<3, Vector3d> {
+   public:
+       EIGEN_MAKE_ALIGNED_OPERATOR_NEW;
+   
+       VertexPoint() {}
+   
+       virtual void setToOriginImpl() override {
+           _estimate = Vector3d(0, 0, 0);
+       }
+   
+       virtual void oplusImpl(const double *update) override {
+           _estimate += Vector3d(update[0], update[1], update[2]);
+       }
+   
+       virtual bool read(istream &in) {}
+   
+       virtual bool write(ostream &out) const {}
+   };
+   
+   ```
+
+3. 投影边
+
+   ```C++
+   // 边的定义
+   // 观测边
+   class EdgeProjection : public g2o::BaseBinaryEdge<2, Vector2d, VertexPoseAndIntrinsics, VertexPoint> {
+   public:
+       EIGEN_MAKE_ALIGNED_OPERATOR_NEW;
+   
+       virtual void computeError() override {
+           auto v0 = (VertexPoseAndIntrinsics *) _vertices[0];
+           auto v1 = (VertexPoint *) _vertices[1];
+           auto proj = v0->project(v1->estimate()); //estimate 可以返回该节点的当前估计
+           _error = proj - _measurement; //计算误差
+       }
+   
+       // use numeric derivatives
+       virtual bool read(istream &in) {}
+       virtual bool write(ostream &out) const {}
+   };
+   ```
+
+4. 选择优化算法（在solve算法中）
+
+   ```c++
+   const int point_block_size = bal_problem.point_block_size();
+   const int camera_block_size = bal_problem.camera_block_size();
+   double *points = bal_problem.mutable_points(); //得到point参数的起始地址
+   double *cameras = bal_problem.mutable_cameras(); //得到camera参数的起始地址
+   
+   // pose dimension 9, landmark is 3
+   typedef g2o::BlockSolver<g2o::BlockSolverTraits<9, 3>> BlockSolverType;
+   typedef g2o::LinearSolverCSparse<BlockSolverType::PoseMatrixType> LinearSolverType; //改了一处
+   // use LM
+   // 选择使用LM算法进行优化
+   auto solver = new g2o::OptimizationAlgorithmLevenberg(
+       g2o::make_unique<BlockSolverType>(g2o::make_unique<LinearSolverType>()));
+   g2o::SparseOptimizer optimizer;
+   optimizer.setAlgorithm(solver);
+   optimizer.setVerbose(true);
+   ```
+
+5. 构建g2o问题
+
+   ```C++
+       /// build g2o problem
+       const double *observations = bal_problem.observations();
+       // 添加顶点 Vertex
+       vector<VertexPoseAndIntrinsics *> vertex_pose_intrinsics;
+       vector<VertexPoint *> vertex_points;
+       // 添加相机位姿节点
+       for (int i = 0; i < bal_problem.num_cameras(); ++i) {
+           VertexPoseAndIntrinsics *v = new VertexPoseAndIntrinsics();
+           double *camera = cameras + camera_block_size * i;
+           v->setId(i);
+           v->setEstimate(PoseAndIntrinsics(camera));
+           optimizer.addVertex(v);
+           vertex_pose_intrinsics.push_back(v);
+       }
+       // 添加路标节点
+       for (int i = 0; i < bal_problem.num_points(); ++i) {
+           VertexPoint *v = new VertexPoint();
+           double *point = points + point_block_size * i;
+           v->setId(i + bal_problem.num_cameras());
+           v->setEstimate(Vector3d(point[0], point[1], point[2]));
+           // g2o在BA中需要手动设置待Marg的顶点
+           v->setMarginalized(true);
+           optimizer.addVertex(v);
+           vertex_points.push_back(v);
+       }
+   
+       // 添加边 edge
+       for (int i = 0; i < bal_problem.num_observations(); ++i) {
+           EdgeProjection *edge = new EdgeProjection;
+           edge->setVertex(0, vertex_pose_intrinsics[bal_problem.camera_index()[i]]);
+           edge->setVertex(1, vertex_points[bal_problem.point_index()[i]]);
+           edge->setMeasurement(Vector2d(observations[2 * i + 0], observations[2 * i + 1]));
+           edge->setInformation(Matrix2d::Identity());
+           edge->setRobustKernel(new g2o::RobustKernelHuber());
+           optimizer.addEdge(edge);
+       }
+   ```
+
+   
+
+6. 调用g2o
+
+   ```c++
+   optimizer.initializeOptimization();
+   optimizer.optimize(40);
+   
+   // set to bal problem
+   for (int i = 0; i < bal_problem.num_cameras(); ++i) {
+       double *camera = cameras + camera_block_size * i;
+       auto vertex = vertex_pose_intrinsics[i];
+       auto estimate = vertex->estimate();
+       estimate.set_to(camera);
+   }
+   for (int i = 0; i < bal_problem.num_points(); ++i) {
+       double *point = points + point_block_size * i;
+       auto vertex = vertex_points[i];
+       for (int k = 0; k < 3; ++k) point[k] = vertex->estimate()[k];
+   }
+   ```
+
+   
+
+程序运行截图如下：
+
+![image-20200712111442228](第七章作业.assets/image-20200712111442228.png)
+
+使用MeshLab打开生成的两个PLY文件，截图如下：
+
+初始的点云文件
+
+<img src="第七章作业.assets/image-20200712110646666.png" alt="image-20200712110646666" style="zoom:67%;" />
+
+经过给g2o BA优化的点云文件如下：
+
+<img src="第七章作业.assets/image-20200712110535580.png" alt="image-20200712110535580" style="zoom:67%;" />
+
+可以看出，通过给g2o BA优化的点云结构更加紧凑 条理也更加清晰
 
 ## 三 直接法的 Bundle Adjustment (5 分，约 3 小时)
 ### 3.1 数学模型
@@ -101,16 +317,36 @@ $$
 
 答：
 $$
-error = I(p_i)-I_j(\pi(KT_jp_j))
+error = I(p_i)-I_j(\pi(KT_jp_i))
 $$
 
 #### 2. 每个error 关联几个优化变量？
 
-答：每个error关联 T p两个优化变量
+答：每个error关联三个优化变量 分别是相机的李代数姿态$\xi$，三维空间点坐标$P = X,Y,Z$。
 
 #### 3. error 关于各变量的雅可比是什么？
 
+答：
 
+error关于空间点坐标P(X,Y,Z)的导数为对应点的像素梯度，即
+$$
+
+$$
+
+
+
+$$
+\begin{aligned}
+\frac{\partial e}{\partial \xi} & =  
+\left[
+\begin{array}{ccc}
+\frac{f_x}{Z} & 0 & -\frac{f_xX}{Z^2} & -\frac{f_xXY}{Z^2} & f_x+\frac{fxX^2}{Z^2} & -\frac{f_xY}{Z}\\
+0 & \frac{f_y}{Z} & -\frac{f_yY}{Z^2} & -f_y-\frac{fyY^2}{Z^2} &
+\frac{f_yXY}{Z^2} & \frac{f_yX}{Z}\\
+\end{array}
+\right]
+\end{aligned}
+$$
 
 ### 3.2 实现
 
@@ -118,11 +354,19 @@ $$
 
 #### 1. 能否不要以 $[x, y, z]^T$ 的形式参数化每个点？
 
+**答**：可以，还可以使用逆深度的方法来参数化路标点。
+
 #### 2. 取 4x4 的 patch 好吗？取更大的 patch 好还是取小⼀点的 patch 好？
+
+**答**：4*4的patch挺好，太小的patch不能反应真正的光度变化。太大的patch不能反应
 
 #### 3. 从本题中，你看到直接法与特征点法在 BA 阶段有何不同？
 
+答：计算误差的方式不同，特征点法在BA阶段最小化的时特征点的重投影误差，直接法最小化的是像素点块的光度误差；
+
 #### 4. 由于图像的差异，你可能需要鲁棒核函数，例如 Huber。此时 Huber 的阈值如何选取？
+
+答：在实践过程中，采用控制变量法对阈值可以做多次测验，取误差最小的阈值作为Huber的阈值。
 
 提示：
 
@@ -135,3 +379,31 @@ $$
 4. 以上数据实际取⾃ DSO[1]。
 
 ![image-20200712085945801](第七章作业.assets/image-20200712085945801.png)
+
+**最后**：
+
+优化前截图：
+
+![image-20200712160704727](第七章作业.assets/image-20200712160704727.png)
+
+![image-20200712160757095](第七章作业.assets/image-20200712160757095.png)
+
+Terminal截图如下所示：
+
+![image-20200712153655669](第七章作业.assets/image-20200712153655669.png)
+
+使用pangolin画出的点云图如下所示：
+
+![image-20200712153829196](第七章作业.assets/image-20200712153829196.png)
+
+![image-20200712153913386](第七章作业.assets/image-20200712153913386.png)
+
+当注释掉鲁棒核函数时，结果如下：
+
+只能优化4次
+
+![image-20200712161430436](第七章作业.assets/image-20200712161430436.png)
+
+<img src="第七章作业.assets/image-20200712161408044.png" alt="image-20200712161408044" style="zoom:50%;" />
+
+* 在测试过程中发现，让g2o自己计算雅克比的效果并不好。
